# pysimtra

./: .gitignore  .readthedocs.yaml  MANIFEST.in  README.md  examples.ipynb  pyproject.toml
docs/: requirements.txt
docs/source/: conf.py  getting_started.rst  index.rst
docs/source/api_reference/: components.rst  index.rst  package_setup.rst  sputter_system.rst  surfaces.rst
docs/source/getting_started/: index.rst  installation.rst  introduction.rst  limitations.rst
docs/source/user_guide/: index.rst  multi_cathode_system.ipynb  multi_cathode_system.rst  single_cathode_system.ipynb  single_cathode_system.rst  subclassing.ipynb
racetracks/: Ag_racetrack_1.5_inch.txt  Al_racetrack_1.5_inch.txt  Au_racetrack_1.5_inch.txt  Co_racetrack_1.5_inch.txt  Cr_racetrack_1.5_inch.txt  Cu_racetrack_1.5_inch.txt  Fe_racetrack_1.5_inch.txt  Mo_racetrack_1.5_inch.txt  Ni_racetrack_1.5_inch.txt  Pd_racetrack_1.5_inch.txt  Pt_racetrack_1.5_inch.txt  Racetrack_Ag_1.5_inch.txt  Racetrack_Al_1.5_inch.txt  Racetrack_Au_1.5_inch.txt  Racetrack_Co_1.5_inch.txt  Racetrack_Cr_1.5_inch.txt  Racetrack_Cu_1.5_inch.txt  Racetrack_Fe_1.5_inch.txt  Racetrack_Mo_1.5_inch.txt  Racetrack_Ni_1.5_inch.txt  Racetrack_Pd_1.5_inch.txt  Racetrack_Pt_1.5_inch.txt  Racetrack_Ru_1.5_inch.txt  Racetrack_Si_1.5_inch.txt  Racetrack_Ta_1.5_inch.txt  Racetrack_Ti_1.5_inch.txt  Racetrack_V_1.5_inch.txt  Ru_racetrack_1.5_inch.txt  Si_racetrack_1.5_inch.txt  Ta_racetrack_1.5_inch.txt  Ti_racetrack_1.5_inch.txt  V_racetrack_1.5_inch.txt
src/pysimtra/: __init__.py  simtra_write.py  sputter_system.py
src/pysimtra/components/: chamber.py  dummy_object.py  magnetron.py
src/pysimtra/surfaces/: circle.py  cone.py  cylinder.py  plane.py  rectangle.py  sphere.py  surface.py
