[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pysimtra"
version = "1.0.0"
description = "A package for simulating the transport of sputtered atoms for multiple magnetrons in parallel."
authors = [
    { name = "Felix Thelen", email = "felix.thelen@ruhr-uni-bochum.de" }
]
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["magnetron sputtering", "monte carlo", "sputter simulation", "SIMTRA"]
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: GNU GPLv3",
    "Operating System :: Windows",
]
dependencies = [
    "numpy>=1.26.0",
    "pandas>=2.1.1"
]

[project.urls]
Home = "https://github.com/felixthln/pysimtra"
