[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pysimtra"
version = "1.0.1"
description = "A package for simulating the transport of sputtered atoms for multiple magnetrons in parallel."
authors = [
    { name = "Felix Thelen", email = "felix.thelen@ruhr-uni-bochum.de" }
]
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["magnetron sputtering", "monte carlo", "sputter simulation", "SIMTRA"]
requires-python = ">=3.9"
classifiers = [
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
dependencies = [
    "numpy >= 1.26.0",
    "pandas >= 2.1.1"
]

[metadata]
license_expression = "GPL-3.0-or-later"

[project.urls]
Repository = "https://github.com/felixthln/pysimtra"
Documentation = "https://pysimtra.readthedocs.io/en/latest/"
